# EKG-EQ-VST3

./: CMakeLists.txt  README.md  installer.nsi
.github/workflows/: build.yml
ekgeq-clap/: ekgeq_clap.cpp
ekgeq-plugin/resource/: ekgeq.rc
ekgeq-plugin/source/: biquad.h  ekgeq_band_defs.h  ekgeq_controller.cpp  ekgeq_controller.h  ekgeq_editor.cpp  ekgeq_editor.h  ekgeq_factory.cpp  ekgeq_ids.h  ekgeq_processor.cpp  ekgeq_processor.h  version.h
ekgeq-plugin/ui/: ekgeq_dsp_engine.js  index.html
ekgeq-plugin/webview2/include/: EventToken.h
standalone_test/: main.cpp
